@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     29/10/2000
-## RCS-ID:      $Id: typemap,v 1.79 2005/09/09 16:04:02 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.80 2005/10/16 21:03:40 mbarbon Exp $
 ## Copyright:   (c) 2000-2005 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -184,6 +184,7 @@ wxGBSpan                O_GBSPAN
 wxGBPosition &          O_GBPOSITION
 wxGBSpan &              O_GBSPAN
 wxGBSizerItem *         O_WXOBJECT
+wxStdDialogButtonSizer * O_WXOBJECT
 
 wxDC *                  O_WXOBJECT
 wxMemoryDC *            O_WXOBJECT
@@ -191,6 +192,8 @@ wxWindowDC *            O_WXOBJECT
 wxClientDC *            O_WXOBJECT
 wxPaintDC *             O_WXOBJECT
 wxScreenDC *            O_WXOBJECT
+wxBufferedDC *          O_WXOBJECT
+wxBufferedPaintDC *     O_WXOBJECT
 
 wxTaskBarIcon *         O_WXOBJECT
 
